couple hotfixes, bad sam

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<li>Remote Work, preferrably with flexible schedules.</li>
 				<li>Lead, Archtecture, or Developer Advocate positions.</li>
 				<li>Freedom to use the best tools for a given problem.</li>
-				<li>Companies that embrace and contributing to OSS.</li>
+				<li>Companies that embrace using and contributing to OSS.</li>
 			</ul>
 		</section>
 	</body>
