--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>title</title>
+		<title>Sam Ferree | Full Stack Web Engineer | C#, .NET Core, Linux, Angular</title>
 	<link rel="stylesheet" href="styles.css" type="text/css">
 	</head>
 	<body>
@@ -13,6 +13,7 @@
 				<address>12232 Kimball Run, Fort Wayne IN, 46845</address>
 				<a href="mailto:">sferree567@gmail.com</a>
 				<a href="tel:+14075588890">(407) 558-8890</a>
+				<a href="https://github.com/czechsmix">GitHub</a>
 			</div>
 		</div>
 		<section>
