Add work history

--- a/index.html
+++ b/index.html
@@ -51,6 +51,85 @@
 		</section>
 		<section>
 			<h3>Work Experience</h3>
+			<table>
+				<thead>
+					<th>Lincoln Financial</th>
+					<th>Application Developer</th>
+					<th>Present</th>
+				</thead>
+				<tr>
+					<td><strong>C#, .NET, Entity Framework</strong></td>
+					<td>Design and Implement Support Solutions to Critical Enterprise Applications</td>
+				</tr>
+				<tr>
+					<td>JAVA, JSF, PrimeFaces, Hibernate</td>
+					<td>Design and Develop Full Stack Web Application for Critical Enterprise Applications </td>
+				</tr>
+				<thead>
+					<th>DuCharme McMillan & Associates</th>
+					<th>Application Developer</th>
+					<th>October 2015</th>
+				</thead>
+				<tr>
+					<td>JAVA, Hibernate</td>
+					<td>Design and Develop service layers for enterprise tax applications</td>
+				</tr>
+				<tr>
+					<td>JAVA, Struts, JavaScript, YUI, JSP</td>
+					<td>Maintain and Update Web Application as UI for Tax application services</td>
+				</tr>
+				<thead>
+					<th>Extension Healthcare/Vocera</th>
+					<th>Solutions Engineer</th>
+					<th>May 2014</th>
+				</thead>
+				<tr>
+					<td>Ruby on Rails</td>
+					<td>Design and Architect datasets and workflows, to adapt
+						Extension platform to customer desired product</td>
+				</tr>
+				<tr>
+					<td>JAVA, Selenium, Twist/Gauge</td>
+					<td>Laid foundation for QA's automated testing effort, Help support and QA troubleshoot problems with solutions.</td>
+				</tr>
+				<thead>
+					<th>Junior Application Developer</th>
+					<th>Phase One Consulting Group</th>
+					<th>November 2012</th>
+				</thead>
+				<tr>
+					<td>Javascript, JQuery</td>
+					<td>Lead developer for enhancement to U.S. Dept of VA Public Quality and
+						Safety Website. </td>
+				</tr>
+				<tr>
+					<td><strong>ASP.NET MVC</strong>, jQuery, GoogleMaps API, CSS</td>
+					<td>Frontend work on U.S. DOT Carpool Web Application</td>
+				</tr>
+				<tr>
+					<td>.NET WebForms, NHibernate</td>
+					<td>Full Stack developer for VA NUMI Project</td>
+				</tr>
+				<thead>
+					<th>Application Developer Intern</th>
+					<th>Navistar International</th>
+					<th>June 2011</th>
+				</thead>
+				<tr>
+					<td>JAVA, C#, .NET, JSP, Swing</td>
+					<td>Engine Diagnostics and Enterprise Services Applications</td>
+				</tr>
+				<thead>
+					<th>Software Intern</th>
+					<th>LHP Software</th>
+					<th>May 2007</th>
+				</thead>
+				<tr>
+					<td><strong>C#, .NET Windows Forms</strong>, Quickbooks API</td>
+					<td>Financial Analysis with Quickbooks Integration</td>
+					<td><strong>June 2006</strong></td>
+				</tr>
+			</table>
 		</section>
 		<section>
 			<h3>Seeking Positions that offer:</h3>
