--- a/index.html
+++ b/index.html
@@ -140,5 +140,6 @@
 				<li>Companies that embrace using and contributing to OSS.</li>
 			</ul>
 		</section>
+		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	</body>
 </html>
