--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 				<address>12232 Kimball Run, Fort Wayne IN, 46845</address>
 				<a href="mailto:">sferree567@gmail.com</a>
 				<a href="tel:+14075588890">(407) 558-8890</a>
-				<a href="https://github.com/czechsmix">GitHub</a>
+				<a href="https://github.com/czechsmix"><i class="fab fa-github"></i></a>
+				<a href="https://linkedin.com/in/samferree"></a>
 			</div>
 		</div>
 		<section>
