--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
 			</ul>
 		</section>
 		<section>
+			<h3>Seeking Positions that offer:</h3>
+			<ul>
+				<li>Remote Work, preferrably with flexible schedules.</li>
+				<li>Lead, Archtecture, or Developer Advocate positions.</li>
+				<li>Freedom to use the best tools for a given problem.</li>
+				<li>Companies that embrace using and contributing to OSS.</li>
+			</ul>
+		</section>
+		<section>
 			<h3>Work Experience</h3>
 			<table>
 				<thead>
@@ -134,13 +143,9 @@
 			</table>
 		</section>
 		<section>
-			<h3>Seeking Positions that offer:</h3>
-			<ul>
-				<li>Remote Work, preferrably with flexible schedules.</li>
-				<li>Lead, Archtecture, or Developer Advocate positions.</li>
-				<li>Freedom to use the best tools for a given problem.</li>
-				<li>Companies that embrace using and contributing to OSS.</li>
-			</ul>
+			<h3>Education</h3>
+			<p>Studied <strong>Computer Science</strong> at Indiana Institute of Technology</p>
+			<p>Continuing skills training through <a href="https:pluralsight.com/profile/sam-ferree">Pluralsight</a> and <a href="https://teamtreehouse.com/samuelferree">Treehouse.</a></p>
 		</section>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	</body>
