--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Sam Ferree | Full Stack Web Engineer | C#, .NET Core, Linux, Angular</title>
-	<link rel="stylesheet" href="styles.css" type="text/css">
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="//basehold.it/16">
+	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<div class="header">
 			<h1>Sam Ferree</h1>
-			<h2>Full Stack Web Engineer</h2>
+			<h3>Full Stack Web Engineer</h3>
 			<div class="contact">
 				<address>12232 Kimball Run, Fort Wayne IN, 46845</address>
 				<a href="mailto:">sferree567@gmail.com</a>
