finalized typography... start table styles

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Sam Ferree | Full Stack Web Engineer | C#, .NET Core, Linux, Angular</title>
-	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="//basehold.it/16">
-	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700" rel="stylesheet">
-	<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="reset.css">
+		<!-- <link rel="stylesheet" href="//basehold.it/18"> -->
+		<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700" rel="stylesheet">
+		<link rel="stylesheet" href="typography.css">
+		<link rel="stylesheet" href="tables.css">
 	</head>
 	<body>
 		<div class="header">
@@ -147,8 +148,8 @@
 		</section>
 		<section>
 			<h3>Education</h3>
-			<p>Studied <strong>Computer Science</strong> at Indiana Institute of Technology</p>
-			<p>Continuing skills training through <a href="https:pluralsight.com/profile/sam-ferree">Pluralsight</a> and <a href="https://teamtreehouse.com/samuelferree">Treehouse.</a></p>
+			<p>Studied <strong>Computer Science</strong> at Indiana Institute of Technology
+			<br />Continuing skills training through <a href="https:pluralsight.com/profile/sam-ferree">Pluralsight</a> and <a href="https://teamtreehouse.com/samuelferree">Treehouse.</a>
 		</section>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	</body>
