finalize tables, and typography

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				I proactively communicate with all stakeholders from customers, management, and other
 				members of the team to ensure no individuals needs are neglected, and no contribution goes unutilized.
 				I make it a priority to continually educate myself in the latest industry best practices,
-				and to inform my peers and colleagues so that projects I'm apart of are delivered with the
+				and to inform my peers and colleagues so that projects I'm a part of are delivered with the
 				highest standards of industry best practices.
 				I am organized and efficient, enabling me to work independently and deliver on schedule. 
 			</p>
@@ -67,11 +67,11 @@
 		<section>
 			<h3>Work Experience</h3>
 			<table>
-				<thead>
-					<th>Lincoln Financial</th>
-					<th>Application Developer</th>
+				<tr>
+					<th>Lincoln Financial Group</th>
+					<th class="center-text">Application Developer</th>
 					<th>Present</th>
-				</thead>
+				</tr>
 				<tr>
 					<td><strong>C#, .NET, Entity Framework</strong></td>
 					<td>Design and Implement Support Solutions to Critical Enterprise Applications</td>
@@ -80,11 +80,11 @@
 					<td>JAVA, JSF, PrimeFaces, Hibernate</td>
 					<td>Design and Develop Full Stack Web Application for Critical Enterprise Applications </td>
 				</tr>
-				<thead>
+				<tr>
 					<th>DuCharme McMillan & Associates</th>
-					<th>Application Developer</th>
+					<th class="center-text">Application Developer</th>
 					<th>October 2015</th>
-				</thead>
+				</tr>
 				<tr>
 					<td>JAVA, Hibernate</td>
 					<td>Design and Develop service layers for enterprise tax applications</td>
@@ -93,11 +93,11 @@
 					<td>JAVA, Struts, JavaScript, YUI, JSP</td>
 					<td>Maintain and Update Web Application as UI for Tax application services</td>
 				</tr>
-				<thead>
+				<tr>
 					<th>Extension Healthcare/Vocera</th>
-					<th>Solutions Engineer</th>
+					<th class="center-text">Solutions Engineer</th>
 					<th>May 2014</th>
-				</thead>
+				</tr>
 				<tr>
 					<td>Ruby on Rails</td>
 					<td>Design and Architect datasets and workflows, to adapt
@@ -107,11 +107,11 @@
 					<td>JAVA, Selenium, Twist/Gauge</td>
 					<td>Laid foundation for QA's automated testing effort, Help support and QA troubleshoot problems with solutions.</td>
 				</tr>
-				<thead>
+				<tr>
 					<th>Junior Application Developer</th>
-					<th>Phase One Consulting Group</th>
+					<th class="center-text">Phase One Consulting Group</th>
 					<th>November 2012</th>
-				</thead>
+				</tr>
 				<tr>
 					<td>Javascript, JQuery</td>
 					<td>Lead developer for enhancement to U.S. Dept of VA Public Quality and
@@ -125,20 +125,20 @@
 					<td>.NET WebForms, NHibernate</td>
 					<td>Full Stack developer for VA NUMI Project</td>
 				</tr>
-				<thead>
+				<tr>
 					<th>Application Developer Intern</th>
-					<th>Navistar International</th>
+					<th class="center-text">Navistar International</th>
 					<th>June 2011</th>
-				</thead>
+				</tr>
 				<tr>
 					<td>JAVA, C#, .NET, JSP, Swing</td>
 					<td>Engine Diagnostics and Enterprise Services Applications</td>
 				</tr>
-				<thead>
+				<tr>
 					<th>Software Intern</th>
-					<th>LHP Software</th>
+					<th class="center-text">LHP Software</th>
 					<th>May 2007</th>
-				</thead>
+				</tr>
 				<tr>
 					<td><strong>C#, .NET Windows Forms</strong>, Quickbooks API</td>
 					<td>Financial Analysis with Quickbooks Integration</td>
