--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<h3>Seeking Positions that offer:</h3>
 			<ul>
 				<li>Remote Work, preferrably with flexible schedules.</li>
-				<li>Lead, Archtecture, or Developer Advocate positions.</li>
+				<li>Lead, Architecture, or Developer Advocate positions.</li>
 				<li>Freedom to use the best tools for a given problem.</li>
 				<li>Companies that embrace using and contributing to OSS.</li>
 			</ul>
