Expand on education

--- a/index.html
+++ b/index.html
@@ -148,8 +148,20 @@
 		</section>
 		<section>
 			<h3>Education</h3>
-			<p>Studied <strong>Computer Science</strong> at Indiana Institute of Technology
-			<br />Continuing skills training through <a href="https:pluralsight.com/profile/sam-ferree">Pluralsight</a> and <a href="https://teamtreehouse.com/samuelferree">Treehouse.</a>
+			<h4>Studied <strong>Computer Science</strong> at Indiana Institute of Technology</h4>
+				<ul>
+					<li>ACM Programming Team Captain</li>
+					<li><strong>Sigma Phi Epislon</strong> President</li>
+				</ul>
+			<h4>Continuing Education</h4>
+			<ul>
+				<li>
+					<a href="https:pluralsight.com/profile/sam-ferree">Pluralsight Profile</a>
+				</li>
+				<li>
+					<a href="https://teamtreehouse.com/samuelferree">Treehouse Profile</a>
+				</li>
+			</ul>
 		</section>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	</body>
