--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 				<a href="mailto:">sferree567@gmail.com</a>
 				<a href="tel:+14075588890">(407) 558-8890</a>
 				<br />
-				<a href="https://github.com/czechsmix"><i class="fab fa-github"></i></a>
-				<a href="https://linkedin.com/in/samferree"><i class="fab fa-linkedin"></i></a>
+				<a href="https://github.com/czechsmix" title="View my profile on GitHub"><i class="fab fa-github"></i></a>
+				<a href="https://linkedin.com/in/samferree" title="Connect with me on LinkedIn"><i class="fab fa-linkedin"></i></a>
+				<a href="Resume-2018-02-25.docx" title="Download a docx copy of this resume"><i class="far fa-file"></i></a>
+				<a href="Resume-2018-02-25.pdf" title="Download a pdf copy of this resume"><i class="far fa-file-pdf"></i></a>
 			</div>
 		</div>
 		<section>
