move download links and use correct icon

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 		<link rel="stylesheet" href="reset.css">
 		<!-- <link rel="stylesheet" href="//basehold.it/18"> -->
 		<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
 		<link rel="stylesheet" href="typography.css">
 		<link rel="stylesheet" href="tables.css">
+		<link rel="stylesheet" href="layout.css">
 	</head>
 	<body>
 		<div class="header">
@@ -20,8 +22,11 @@
 				<br />
 				<a href="https://github.com/czechsmix" title="View my profile on GitHub"><i class="fab fa-github"></i></a>
 				<a href="https://linkedin.com/in/samferree" title="Connect with me on LinkedIn"><i class="fab fa-linkedin"></i></a>
-				<a href="Resume-2018-02-25.docx" title="Download a docx copy of this resume"><i class="far fa-file"></i></a>
-				<a href="Resume-2018-02-25.pdf" title="Download a pdf copy of this resume"><i class="far fa-file-pdf"></i></a>
+				<div class="download">
+					Download:
+					<a href="Resume-2018-02-25.docx" title="Download a docx copy of this resume"><i class="far fa-file-word"></i></a>
+					<a href="Resume-2018-02-25.pdf" title="Download a pdf copy of this resume"><i class="far fa-file-pdf"></i></a>
+				</div>
 			</div>
 		</div>
 		<section>
