--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<br />
 				<a href="https://github.com/czechsmix" title="View my profile on GitHub"><i class="fab fa-github"></i></a>
 				<a href="https://linkedin.com/in/samferree" title="Connect with me on LinkedIn"><i class="fab fa-linkedin"></i></a>
+				<a href="https://stackoverflow.com/story/samferree" title="View my story on StackOverflow"><i class="fab fa-stack-overflow"></i></a>
 				<div class="download">
 					Download:
 					<a href="Resume-2018-02-25.docx" title="Download a docx copy of this resume"><i class="far fa-file-word"></i></a>
