--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<h1>Sam Ferree</h1>
 			<h3>Full Stack Web Engineer</h3>
 			<div class="contact">
-				<address>12232 Kimball Run, Fort Wayne IN, 46845</address>
+				<address>Fort Wayne IN, 46845</address>
 				<a href="mailto:">sferree567@gmail.com</a>
 				<a href="tel:+14075588890">(407) 558-8890</a>
 				<br />
