--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<a href="https://stackoverflow.com/story/samferree" title="View my story on StackOverflow"><i class="fab fa-stack-overflow"></i></a>
 				<div class="download">
 					Download:
-					<a href="Resume-2018-02-25.docx" title="Download a docx copy of this resume"><i class="far fa-file-word"></i></a>
-					<a href="Resume-2018-02-25.pdf" title="Download a pdf copy of this resume"><i class="far fa-file-pdf"></i></a>
+					<a href="Resume-2019-04-16.docx" title="Download a docx copy of this resume"><i class="far fa-file-word"></i></a>
+					<a href="Resume-2019-04-16.pdf" title="Download a pdf copy of this resume"><i class="far fa-file-pdf"></i></a>
 				</div>
 			</div>
 		</div>
@@ -50,8 +50,9 @@
 				<li>HTML5/CSS3, Bootstrap, and Sass</li>
 				<li>Agile, Scrum, and Lean/Kanban</li>
 				<li>Git and GitHub</li>
-				<li>Continuous Integration, Continous Deployment, and Test Driven Development</li>
+				<li>Continuous Integration, Continuous Deployment, and Test Driven Development</li>
 				<li>Cloud Architecture with Azure, and Containerization with Docker</li>
+				<li>Application Integration via Messaging.</li>
 				<li>Comfortable in Linux, Mac, or Windows environment.</li>
 			</ul>
 			<h4>Additional Technologies</h4>
@@ -76,9 +77,22 @@
 			<h3>Work Experience</h3>
 			<table>
 				<tr>
+					<th>Celina Insurance Group</th>
+					<th class="center-text">Web Developer</th>
+					<th>Present</th>
+				</tr>
+				<tr>
+					<td><strong>C#, ASP.NET Core</strong></td>
+					<td>Design and Implement web services</td>
+				</tr>
+				<tr>
+					<td><strong>TypeScript, Angular 6/7</strong></td>
+					<td>Communicate with business and design solutions that meet their needs.</td>
+				</tr>
+				<tr>
 					<th>Lincoln Financial Group</th>
 					<th class="center-text">Application Developer</th>
-					<th>Present</th>
+					<th>June 2018</th>
 				</tr>
 				<tr>
 					<td><strong>C#, .NET, Entity Framework</strong></td>
